modifs marges et gagnant du mois précédent

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
 
         <!-- Colonne de gauche avec le texte et les boutons -->
 
-        <div class='col-lg-5 col-md-12 col-sm-12 pl-5 pr-5'>
-            <h2 class="justify-content-center text-center index_margin_title">L'énigme du mois: <strong>La Disparition</strong></h2>
+        <div class='col-lg-5 col-md-12 col-sm-12 pl-5 pr-5 '>
+            <h2 class="justify-content-center text-center index_margin_title padding_cotes_general">L'énigme du mois: <strong>La Disparition</strong></h2>
         
             <p class="text-justify">
                     Oh non ! La tour Eiffel a disparu ! Lorsque <strong>Wildo Coda</strong> s'est réveillé ce matin et qu'il a regardé par la fenêtre, l'impensable était arrivé. Là où la Dame de Fer se dressait fièrement seulement la veille, il n'y avait plus qu'un seul étage encore fumant. Wildo se rendit immédiatement sur le Champ de Mars pour trouver des indices, mais la seule chose qu'il découvrit aux pieds de la tour fut une boite en fer blanc cabossée. A l'intérieur, une pellicule photo et un mot signé <strong>Flash Kodak</strong>:
@@ -212,7 +212,7 @@
     -->
 
     <article class="pt-4">
-      <h2 class="winner_section index_margin_title pt-4">Prêt à résoudre le mystère de La Chambre Noire ?</h2>
+      <h2 class="winner_section index_margin_title padding_cotes_general pt-4">Prêt à résoudre le mystère de La Chambre Noire ?</h2>
 
       <div class="row align-items-center justify-content-center px-4 px-md-5">
 
@@ -241,7 +241,7 @@
     </div>
         <div class="col-md-3 winner-box-soumettre">
           <div class="winner_soumettre rounded">
-          <h2 class="pl-1 pr-1 winner_call_to_action">Aide moi à résoudre le mystère et gagne un cadeau Wild!</h2>
+          <h2 class=" winner_call_to_action">Aide moi à résoudre le mystère et gagne un cadeau Wild!</h2>
           <a href="concept_contact.html#contact"><button type="button" class="btn btn-dark winner-bouton">Soumets ta réponse</button></a>
           <a href="concept_contact.html#contact"><button type="button" class="btn btn-dark winner-bouton-2">Ma réponse</button></a>
           </div>
