--- a/enigme-page.html
+++ b/enigme-page.html
@@ -586,24 +586,27 @@
      <!--  <div class="row past-enig-pre">
         <div class="col-lg-12 "><h4>Gagnant du mois précédent</h4></div>
       </div> -->
-      <div class="row past-enig-pre align-items-center margin_general">
-        <div class="col-lg-2  col-md-2 col-sm-6 col-xs-12 last-winner  align-self-center">
-          <h5>Gagnant du mois précédent</h5>
-          <div>
-            <h4><strong>Gaboriau</strong></h4>
-            <h4><strong>Wildo</strong></h4>
-          </div>
-          
+      <div class="row padding_cotes_general">
+        <div class="col gagnant_mois_prec_h4">
+          <h4>Gagnant du mois précédent</h4>
         </div>
-        <div class="col-lg-2  col-md-4 col-sm-6 col-xs-12 last-winner ">
-          <img src="images/Abdou-Rahim.png" alt=".img-gagnant" class="img-gagnant rounded-circle">
-        </div><!--historique de l'énigme prédédente-->
-        <div class="col-lg-8 col-md-6 col-sm-12 col-xs-12 last-winner">
-          <p>Le mystère de la butte Montmartre: Le concept est génial!</p>
-          <p>Le concept est génial: une petite histoire fil conducteur, on se distrait tout en apprenant quelques generalités et anecdotes sur le quartier.</p>
+      </div>
+
+      <div class="row past-enig-pre justify-content-start align-items-center last-winner padding_cotes_general ">
+        <div class="col-sm-3 col-md-3 col-lg-2 border_commentaire_gagnant">          
+            <img src="images/Abdou-Rahim.png" alt="img-gagnant" class="img-gagnant center-block rounded-circle">
+        </div>
+        <div class=" col-12 col-sm-9 col-7 col-md-8 col-lg-4 titre_commentaire_gagnant col_commentaire_gagnant">
+          <h5><strong>"J'ai adoré participer au mystère de la butte Montmartre, le concept est génial!"</strong></h5>
+          <h6 class="nom_gagnant_enigme" >Abdou Kerkeb</h6>
+        </div>
+                  
+        <div class="col-md-12 col-lg-4 col_commentaire_gagnant">
+          <p>Le site est bien fait, on comprend vite le fil conducteur qui nous raconte une histoire, on se distrait tout en apprenant quelques anecdotes sur le quartier.</p>
         </div>
       </div>
         <!--fin de la présentation-->
+
       <!--la photos gagnante j'ai rajouter hiden-xs pour cacher l'image lorsque on passe en xs  en plus j'ai rajouté aussi past-enig-pre pour créer des marges entre les col-->
       <div class="row ">
         <div class="col-sm-12 d-none d-md-block img-past-win justify-content-center ">
