Modelage de la partie Concept. Ajout dune icone. Redimensions. Camille

--- a/concept_contact.html
+++ b/concept_contact.html
@@ -68,17 +68,17 @@
 
 					<div class="row align-items-center d-flex pt-3 margin_general">
 
-						<div class="col-md-5">
+						<div class="col-md-6">
 							<img src="images/bottle.jpg" class="img-fluid centrer_photo rounded">
 						</div>
-						<div class="col-md-6 concept-texte-droite">
+						<div class="col-md-5 ml-5 concept-texte-droite">
 							<p class="defi"><b> Le défi de la chambre noire !</b></p>
 							<p>
 								L'heure est à l'aventure, si vous lisez ceci c'est que vous souhaitez participer. Cela prouve que vous êtes curieux(se) et
 								aimez la compétition. Vous êtes au bon endroit. 
-								Différents lieux vont devoir être decouverts à travers des photographies que je publierais sur cette page.
-								Sous forme d'un jeu enigme, d'une chasse au trésor, le joueur sera guidé tout le long jusqu'à la destination finale. 
-							</p>
+								Différents lieux vont devoir être decouverts à travers des photographies que je publierais sur cette page. Sous forme d'un jeu enigme, d'une chasse au trésor, 
+								le joueur sera guidé tout le long jusqu'à la destination finale.
+							</p>		
 							<p>
 								Pour gagner, il suffit de poster votre solution avec le nom du lieu à trouver. 
 							</p>
@@ -88,7 +88,10 @@
 							</p>
 						</div>
 					</div>
-					<h2 id="title_roles">Les règles</h2>
+						<div class="regle-du-jeu">
+							<h2 id="title_roles"><b>Les règles du jeu</b></h2> 
+							<img src="images/fleche-bas.png" class="icone-double">
+						</div>
 
 					<div class="row align-items-center pb-3 margin_general">
 						<div class="col-md-2 p-3">
