modifs page enigme format tablette, hover clair, loupe grise partout

--- a/enigme-page.html
+++ b/enigme-page.html
@@ -121,7 +121,8 @@
                   <div class="background_hover2"></div>
                   <div class="clue_number">
                     <p class="white_color">Indice 2</p>
-                    <img src="images/zoom.png" alt="#"/>
+                    <img class="image_back-gris" src="images/zoom_gris.png" alt="#"/>
+                    <img class="image_back_white" src="images/zoom.png" alt="#"/>
                   </div>
                 </a>
                 <img class="enigme_cours_img" src="images/photo12.jpg" alt="#"/>
@@ -179,7 +180,8 @@
                   <div class="background_hover2"></div>
                   <div class="clue_number">
                     <p class="white_color">Indice 4</p>
-                    <img src="images/zoom.png" alt="#"/>
+                    <img class="image_back-gris" src="images/zoom_gris.png" alt="#"/>
+                    <img class="image_back_white" src="images/zoom.png" alt="#"/>
                   </div>
                 </a>
                 <img class="enigme_cours_img" src="images/photo15.jpg" alt="#"/>
@@ -208,7 +210,8 @@
                   <div class="background_hover2"></div>
                   <div class="clue_number">
                     <p class="white_color">Indice 5</p>
-                    <img src="images/zoom.png" alt="#"/>
+                    <img class="image_back-gris" src="images/zoom_gris.png" alt="#"/>
+                    <img class="image_back_white" src="images/zoom.png" alt="#"/>
                   </div>
                 </a>
                 <img class="enigme_cours_img" src="images/photo13.jpg" alt="#"/>
@@ -266,7 +269,8 @@
                   <div class="background_hover2"></div>
                   <div class="clue_number">
                     <p class="white_color">Indice 7</p>
-                    <img src="images/zoom.png" alt="#"/>
+                    <img class="image_back-gris" src="images/zoom_gris.png" alt="#"/>
+                    <img class="image_back_white" src="images/zoom.png" alt="#"/>
                   </div>
                 </a>
                 <img class="enigme_cours_img" src="images/photo12.jpg" alt="#"/>
@@ -353,7 +357,8 @@
                   <div class="background_hover2"></div>
                   <div class="clue_number">
                     <p class="white_color">Indice 10</p>
-                    <img src="images/zoom.png" alt="#"/>
+                    <img class="image_back-gris" src="images/zoom_gris.png" alt="#"/>
+                    <img class="image_back_white" src="images/zoom.png" alt="#"/>
                   </div>
                 </a>
                 <img class="enigme_cours_img" src="images/photo13.jpg" alt="#"/>
@@ -408,9 +413,9 @@
             <div class="col-sm-6 col-md-6 col-lg-3 encours_indice_enigme">
               <div class="clue">
                 <a href="#" data-toggle="modal" data-target="#encours_myModal12">
-                  <div class="background_hover2"></div>
+                  <div class="background_hover3"></div>
                   <div class="clue_number">
-                    <p class="white_color">?</p>
+                    <p class="color_clue">?</p>
                   </div>
                 </a>
                     
@@ -684,7 +689,8 @@
                     <div class="background_hover2"></div>
                       <div class="clue_number">
                         <p class="white_color">Indice 2</p>
-                        <img src="images/zoom.png" alt="#"/>
+                        <img class="image_back-gris" src="images/zoom_gris.png" alt="#"/>
+                        <img class="image_back_white" src="images/zoom.png" alt="#"/>
                       </div>
                   </a>
                   <img class="prec_img_enigme" src="images/epn-02.jpg" alt="#"/>
@@ -735,7 +741,8 @@
                   <div class="background_hover2"></div>
                     <div class="clue_number">
                       <p class="white_color">Indice 4</p>
-                      <img src="images/zoom.png" alt="#"/>
+                      <img class="image_back-gris" src="images/zoom_gris.png" alt="#"/>
+                      <img class="image_back_white" src="images/zoom.png" alt="#"/>
                     </div>
                 </a>
                 <img class="prec_img_enigme" src="images/epn-04.jpg" alt="#"/>
@@ -761,7 +768,8 @@
                   <div class="background_hover2"></div>
                     <div class="clue_number">
                       <p class="white_color">Indice 5</p>
-                      <img src="images/zoom.png" alt="#"/>
+                      <img class="image_back-gris" src="images/zoom_gris.png" alt="#"/>
+                      <img class="image_back_white" src="images/zoom.png" alt="#"/>
                     </div>
                 </a>
                 <img class="prec_img_enigme" src="images/epn-05.jpg" alt="#"/>
@@ -813,7 +821,8 @@
                   <div class="background_hover2"></div>
                     <div class="clue_number">
                       <p class="white_color">Indice 7</p>
-                      <img src="images/zoom.png" alt="#"/>
+                      <img class="image_back-gris" src="images/zoom_gris.png" alt="#"/>
+                      <img class="image_back_white" src="images/zoom.png" alt="#"/>
                     </div>
                 </a>
                 <img class="prec_img_enigme" src="images/epn-07.jpg" alt="#"/>
@@ -891,7 +900,8 @@
                   <div class="background_hover2"></div>
                     <div class="clue_number">
                       <p class="white_color">Indice 10</p>
-                      <img src="images/zoom.png" alt="#"/>
+                      <img class="image_back-gris" src="images/zoom_gris.png" alt="#"/>
+                      <img class="image_back_white" src="images/zoom.png" alt="#"/>
                     </div>
                 </a>
                 <img class="prec_img_enigme" src="images/epn-10.jpg" alt="#"/>
@@ -943,7 +953,8 @@
                   <div class="background_hover2"></div>
                     <div class="clue_number">
                       <p class="white_color">Carte</p>
-                      <img src="images/zoom.png" alt="#"/>
+                      <img class="image_back-gris" src="images/zoom_gris.png" alt="#"/>
+                      <img class="image_back_white" src="images/zoom.png" alt="#"/>
                     </div>
                 </a>
                 <img class="prec_img_enigme" src="images/carte_enigme_prec.png" alt="#"/>
