ajout carousel-indicators sur le premier caroussel

--- a/enigme-page.html
+++ b/enigme-page.html
@@ -482,7 +482,11 @@
         -->
         <div class="row justify-content-center d-sm-block d-md-none no-gutters-enigme encours_carrousel_row">
           <div id="carouselExampleControls-encours" class="carousel slide col" data-ride="carousel">
-
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-enigme-prec" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-enigme-prec" data-slide-to="1"></li>
+              <li data-target="#carousel-enigme-prec" data-slide-to="2"></li>
+            </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img class="d-block w-100 enigme_cours_img" src="images/ecn03.jpg" alt="First slide">                     
