animation fleche. ca bouge. Camille

--- a/concept_contact.html
+++ b/concept_contact.html
@@ -90,7 +90,9 @@
 					</div>
 						<div class="regle-du-jeu">
 							<h2 id="title_roles"><b>Les règles du jeu</b></h2> 
-							<img src="images/fleche-bas.png" class="icone-double">
+							<div class="wrap">
+								<img src="images/fleche-bas.png" id="arrow" class="animated bounce">
+							</div>
 						</div>
 
 					<div class="row align-items-center pb-3 margin_general">
