deformation images rondes  resolues

--- a/enigme-page.html
+++ b/enigme-page.html
@@ -1421,9 +1421,9 @@
         </div>
         <div class="col-md-4 footer_column footer_social_opacity ml-0 mr-0">
           <p class="footer_marginp2 ml-0 mr-0">La chambre noire sur les réseaux sociaux</p>
-          <a href="#"><img src="images/facebook.png" alt="#"/></a>
-          <a href="#"><img src="images/instagram.png" alt="#"/></a>
-          <a href="#"><img src="images/twitter.png" alt="#"/></a>
+          <a href="#"><img class="social_img" src="images/facebook.png" alt="#"/></a>
+          <a href="#"><img class="social_img" src="images/instagram.png" alt="#"/></a>
+          <a href="#"><img class="social_img" src="images/twitter.png" alt="#"/></a>
         </div>
         <div class="col-md-12 col-lg-4 footer_column ml-0 mr-0">
           <p class="footer_marginp2 ml-0 mr-0">Recevez les derniers indices par mail</p>
