fin de l'ajout des images

--- a/enigme-page.html
+++ b/enigme-page.html
@@ -243,13 +243,13 @@
                     <img src="images/zoom_gris.png" alt="#"/>
                   </div>
                 </a>
-                <img class="enigme_cours_img" src="images/photo15.jpg" alt="#"/>
+                <img class="enigme_cours_img" src="images/ecn06.jpg" alt="#"/>
                 <!--Ma modale-->
                 <div class="modal fade" id="encours_myModal6">
                   <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">                  
                       <div class="card justify-content-center">
-                        <img class="card-image-enigme" src="images/photo15.jpg" alt="Card image">
+                        <img class="card-image-enigme" src="images/ecn06.jpg" alt="Card image">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <a class="button_prev" href="#" data-toggle="modal" data-dismiss="modal" data-target="#encours_myModal5"><img class="button_chevron" src="images/left-chevron.png" alt="#"/></a>
                         <a class="button_next" href="#" data-toggle="modal" data-dismiss="modal" data-target="#encours_myModal7"><img class="button_chevron" src="images/right-chevron.png" alt="#"/></a>
@@ -302,13 +302,13 @@
                     <img src="images/zoom_gris.png" alt="#"/>
                   </div>
                 </a>
-                <img class="enigme_cours_img" src="images/photo13.jpg" alt="#"/>
+                <img class="enigme_cours_img" src="images/ecn08.jpg" alt="#"/>
                 <!--Ma modale-->
                 <div class="modal fade" id="encours_myModal8">
                   <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">                  
                       <div class="card justify-content-center">
-                        <img class="card-image-enigme" src="images/photo13.jpg" alt="Card image">
+                        <img class="card-image-enigme" src="images/ecn08.jpg" alt="Card image">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <a class="button_prev" href="#" data-toggle="modal" data-dismiss="modal" data-target="#encours_myModal7"><img class="button_chevron" src="images/left-chevron.png" alt="#"/></a>
                         <a class="button_next" href="#" data-toggle="modal" data-dismiss="modal" data-target="#encours_myModal9"><img class="button_chevron" src="images/right-chevron.png" alt="#"/></a>
@@ -361,13 +361,13 @@
                     <img class="image_back_white" src="images/zoom.png" alt="#"/>
                   </div>
                 </a>
-                <img class="enigme_cours_img" src="images/photo13.jpg" alt="#"/>
+                <img class="enigme_cours_img" src="images/ecn10.jpg" alt="#"/>
                 <!--Ma modale-->
                 <div class="modal fade" id="encours_myModal10">
                   <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">                  
                       <div class="card justify-content-center">
-                        <img class="card-image-enigme" src="images/photo13.jpg" alt="Card image">
+                        <img class="card-image-enigme" src="images/ecn10.jpg" alt="Card image">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <a class="button_prev" href="#" data-toggle="modal" data-dismiss="modal" data-target="#encours_myModal9"><img class="button_chevron" src="images/left-chevron.png" alt="#"/></a>
                         <a class="button_next" href="#" data-toggle="modal" data-dismiss="modal" data-target="#encours_myModal11"><img class="button_chevron" src="images/right-chevron.png" alt="#"/></a>
@@ -390,13 +390,13 @@
                     <img src="images/zoom_gris.png" alt="#"/>
                   </div>
                 </a>
-                <img class="enigme_cours_img" src="images/photo15.jpg" alt="#"/>
+                <img class="enigme_cours_img" src="images/ecn11.jpg" alt="#"/>
                 <!--Ma modale-->
                 <div class="modal fade" id="encours_myModal11">
                   <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">                  
                       <div class="card justify-content-center">
-                        <img class="card-image-enigme" src="images/photo15.jpg" alt="Card image">
+                        <img class="card-image-enigme" src="images/ecn11.jpg" alt="Card image">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <a class="button_prev" href="#" data-toggle="modal" data-dismiss="modal" data-target="#encours_myModal10"><img class="button_chevron" src="images/left-chevron.png" alt="#"/></a>
                         <a class="button_next" href="#" data-toggle="modal" data-dismiss="modal" data-target="#encours_myModal12"><img class="button_chevron" src="images/right-chevron.png" alt="#"/></a>
